Fix for the github ribbon so it can be in absolute position and don't exceed page width (so the page don't have an horizontal scrollbar)

--- a/app/assets/stylesheets/github_ribbon.css.scss
+++ b/app/assets/stylesheets/github_ribbon.css.scss
@@ -1,30 +1,38 @@
 @import "compass/css3";
 // From: http://unindented.org/articles/2009/10/github-ribbon-using-css-transforms/
-#ribbon {
-  z-index: 5000;
-  background-color: #a00;
-  overflow: hidden;
-  /* top right corner */
+#ribbon_container {
   position: absolute;
-  right: -3em;
-  top: 2.5em;
-  /* 45 deg cw rotation */
-  @include rotate(45deg);
-  /* shadow */
-  @include box-shadow(0 0 1em #888);
-  a {
-    border: 1px solid #faa;
-    color: #fff;
-    display: block;
-    font: bold 81.25% 'Helvetiva Neue', Helvetica, Arial, sans-serif;
-    margin: 0.05em 0 0.075em 0;
-    padding: 0.5em 3.5em;
-    text-align: center;
-    text-decoration: none;
+  right: 0em;
+  top: 0em;
+  overflow: hidden;
+  z-index: 5000;
+  width: 200px;
+  height: 200px;
+  #ribbon {
+    background-color: #a00;
+    /* top right corner */
+    position: absolute;
+    right: -3em;
+    top: 2.5em;
+    /* 45 deg cw rotation */
+    @include rotate(45deg);
     /* shadow */
-    text-shadow: 0 0 0.5em #444;
-    &:hover {
-      text-shadow: 0 0 8em #fff;
+    @include box-shadow(0 0 1em #888);
+    a {
+      border: 1px solid #faa;
+      white-space: nowrap;
+      color: #fff;
+      display: block;
+      font: bold 81.25% 'Helvetiva Neue', Helvetica, Arial, sans-serif;
+      margin: 0.05em 0 0.075em 0;
+      padding: 0.5em 3.5em;
+      text-align: center;
+      text-decoration: none;
+      /* shadow */
+      text-shadow: 0 0 0.5em #444;
+      &:hover {
+        text-shadow: 0 0 8em #fff;
+      }
     }
   }
 }
